--- a/css/styles.css
+++ b/css/styles.css
@@ -492,12 +492,11 @@ body {
 .footer-box3 {
   margin-left: auto;
 }
+.portfolio-form {
+  display: flex;
+}
 .footer-text-label {
-  color: #fff;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  gap 24px;
 }
 
 .footer-input-wrap {
@@ -512,7 +511,7 @@ body {
   border: 1px solid #fff;
   background-color: transparent;
   margin-right: 24px;
-  padding: 0 16px;
+  padding-left: 16px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #fff;
   font-size: 12px;
@@ -534,7 +533,8 @@ body {
 
 .footer-form-btn {
   display: flex;
-  width: 164px;
+  min-width: 165px;
+  height: 40px; 
   padding: 8px 24px;
   justify-content: center;
   align-items: center;
@@ -542,6 +542,7 @@ body {
   border: none;
   background: #4d5ae5;
   cursor: pointer;
+  font-family: "Roboto", sans-serif;
   color: #ffffff;
   font-size: 16px;
   font-weight: 500;
@@ -763,7 +764,7 @@ body {
 }
 
 .modal-field {
-  margin-bottom: 18px;
+  margin-bottom: 8px;
 }
 
 .modal-input {
@@ -775,11 +776,13 @@ body {
   background-color: transparent;
   color: #2e2f42;
   outline: transparent;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
+
 
 .input-wrap {
   position: relative;
+  
 }
 
 .modal-input-icon {
@@ -787,7 +790,7 @@ body {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-input:focus,
@@ -806,11 +809,16 @@ body {
 .input-label {
   color: #8e8f99;
   font-size: 12px;
+  line-height: 1.17;
   font-weight: 400;
   line-height: 1.1;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.04em;
   display: block;
   margin-bottom: 4px;
+}
+
+.filed-comment {
+  margin-bottom: 16px;
 }
 
 .modal-textarea {
@@ -821,30 +829,34 @@ body {
   padding: 8px 16px;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   background-color: transparent;
-  color: #2e2f42;
+  color: rgba(46, 47, 66, 0.4);
   outline: transparent;
   resize: none;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-textarea:focus::placeholder {
   color: transparent;
 }
 
+.field-checkbox {
+  margin-bottom: 24px; 
+}
+
 .check-text {
   color: #8e8f99;
   font-size: 12px;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   display: flex;
   align-items: center;
 }
 
 .check-text span {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   width: 16px;
@@ -852,7 +864,7 @@ body {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: transparent;
 }
 
@@ -876,6 +888,7 @@ body {
   min-width: 169px;
   height: 56px;
   border: none;
+  font-weight: 500;
   border-radius: 4px;
   padding: 16px 32px;
   color: #fff;
