--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,7 @@ body {
   display: flex;
 }
 .footer-text-label {
-  gap 24px;
+  gap: 24px;
 }
 
 .footer-input-wrap {
@@ -534,7 +534,7 @@ body {
 .footer-form-btn {
   display: flex;
   min-width: 165px;
-  height: 40px; 
+  height: 40px;
   padding: 8px 24px;
   justify-content: center;
   align-items: center;
@@ -776,13 +776,11 @@ body {
   background-color: transparent;
   color: #2e2f42;
   outline: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .input-wrap {
   position: relative;
-  
 }
 
 .modal-input-icon {
@@ -790,7 +788,7 @@ body {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus,
@@ -811,7 +809,6 @@ body {
   font-size: 12px;
   line-height: 1.17;
   font-weight: 400;
-  line-height: 1.1;
   letter-spacing: 0.04em;
   display: block;
   margin-bottom: 4px;
@@ -835,7 +832,7 @@ body {
   color: rgba(46, 47, 66, 0.4);
   outline: transparent;
   resize: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea:focus::placeholder {
@@ -843,7 +840,7 @@ body {
 }
 
 .field-checkbox {
-  margin-bottom: 24px; 
+  margin-bottom: 24px;
 }
 
 .check-text {
@@ -864,7 +861,9 @@ body {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: transparent;
 }
 
