--- a/css/styles.css
+++ b/css/styles.css
@@ -874,7 +874,7 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
@@ -889,6 +889,8 @@ body {
 /* Оформлення при вибраному чекбоксі */
 #user-privacy:checked + .check-label .check-text {
   background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 
 .modal-check:focus + .check-text span {
