--- a/css/styles.css
+++ b/css/styles.css
@@ -489,14 +489,14 @@ body {
   fill: #f4f4fd;
 }
 
-.footer-box3 {
+.footer-box-three {
   margin-left: auto;
 }
 .portfolio-form {
   display: flex;
+  gap: 24px;
 }
 .footer-text-label {
-  gap: 24px;
 }
 
 .footer-input-wrap {
@@ -512,10 +512,10 @@ body {
   background-color: transparent;
   margin-right: 24px;
   padding-left: 16px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   color: #fff;
   font-size: 12px;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -848,46 +848,26 @@ body {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  display: inline-flex;
+  display: flex;
   align-items: center;
 }
 
-.check-label {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  display: inline-flex; /* Додаємо inline-flex для позиціонування */
-  align-items: center; /* Вирівнювання по вертикалі */
-}
-
-.custom-checkbox {
-  position: relative; /* Позиціонування відносно батьківського елементу */
-  padding-left: 30px; /* Відступ для розміщення кастомного чекбоксу */
-}
-
-.check-text {
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.check-text span {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: transparent;
-  position: absolute; /* Позиціонування відносно батьківського елементу */
-  left: 0; /* Розміщення зліва від батьківського елементу */
 }
 
-.check-icon {
-  fill: #fff;
-}
-
-/* Оформлення при вибраному чекбоксі */
-#user-privacy:checked + .check-label .check-text {
+.modal-check:checked + .check-text span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
